# latex_image_auditor

./: README.md  pyproject.toml  setup.py
latex_image_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
latex_image_auditor/: checker.py
latex_image_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
